# mobile_robot

./: .gitattributes  .gitignore  README.md  cartographer_sim.sh  startup_sim.sh
3d_models/: base0.FCStd  base1.FCStd  base2.FCStd  base3.FCStd  caster.FCStd  caster.step  caster_p1.FCStd  caster_p1.step  lds.FCStd  opencr.FCStd  power.FCStd  rk3588.FCStd  robot.FCStd  support30mm.FCStd  wheel.FCStd  wheel_p0.FCStd  wheel_p1.FCStd  wheel_p1.step  xl430.FCStd  xl430.step  xl430_p1.FCStd  xl430_p1.step  xl430_p2.FCStd  xl430_p2.step
src/amr/amr_description/: CMakeLists.txt  package.xml
src/amr/amr_description/launch/: amr_display.launch.py
src/amr/amr_description/rviz/: display.rviz
src/amr/amr_description/urdf/: amr.xacro
src/amr/amr_dispatch/amr_dispatch/: CMakeLists.txt  package.xml
src/amr/amr_gazebo/: CMakeLists.txt  package.xml
src/amr/amr_gazebo/launch/: amr_gazebo.launch.py  multi_amr_gazebo.launch.py
src/amr/amr_gazebo/worlds/: warehouse.world
src/amr/amr_localization/amr_amcl/: CMakeLists.txt  package.xml
src/amr/amr_localization/amr_true_pose/: CMakeLists.txt  package.xml
src/amr/amr_localization/amr_true_pose/launch/: amr_true_pose.launch.py
src/amr/amr_localization/amr_true_pose/src/: amr_true_pose.cpp  main.cpp
src/amr/amr_map/: warehouse.pgm  warehouse.yaml
src/amr/amr_motion_control/: CMakeLists.txt  package.xml
src/amr/amr_motion_control/doc/:  测试指令.txt   测试指令_修改8910路径.txt   测试指令_修改89路径.txt
src/amr/amr_motion_control/include/amr_motion_control/: amr_motion_control.hpp
src/amr/amr_motion_control/launch/: amr_motion_control.launch.py
src/amr/amr_motion_control/src/: amr_motion_control.cpp  main.cpp
src/amr/amr_msgs/: CMakeLists.txt  package.xml
src/amr/amr_msgs/msg/: AmrState.msg  Line.msg  Path.msg  Paths.msg  Points.msg  Rotate.msg  TaskPoint.msg  Velocity.msg
src/amr/amr_msgs/srv/: AStar.srv  PurePursuit.srv
src/amr/amr_path_planning/amr_a_star/: CMakeLists.txt  package.xml
src/amr/amr_path_planning/amr_a_star/launch/: amr_a_star.launch.py
src/amr/amr_path_planning/amr_a_star/src/: amr_a_star.cpp  main.cpp
src/amr/amr_path_planning/amr_cbs/: CMakeLists.txt  package.xml
src/amr/amr_path_planning/amr_cbs/src/: amr_cbs.cpp  main.cpp
src/amr/amr_path_planning/amr_dijkstra/: CMakeLists.txt  package.xml
src/amr/amr_path_planning/amr_path_planning/: CMakeLists.txt  package.xml
src/amr/amr_path_planning/amr_path_planning/launch/: amr_path_planning.launch.py
src/amr/amr_path_planning/amr_path_planning/src/: amr_path_planning.cpp  main.cpp
src/amr/amr_teleop/: CMakeLists.txt  command.txt  package.xml
src/amr/amr_trajectory_tracking/amr_model_predictive_control/: CMakeLists.txt  package.xml
src/amr/amr_trajectory_tracking/amr_pure_pursuit/: CMakeLists.txt  package.xml
src/amr/amr_trajectory_tracking/amr_pure_pursuit/launch/: amr_pure_pursuit.launch.py
src/amr/amr_trajectory_tracking/amr_pure_pursuit/src/: amr_pure_pursuit.cpp  main.cpp
src/amr/doc/: points.txt  view.py
src/cartographer_ros/cartographer_ros/: CMakeLists.txt
src/quick_mapping/: CMakeLists.txt  package.xml
src/quick_mapping/include/quick_mapping/: quick_mapping.hpp
src/quick_mapping/src/: main.cpp  quick_mapping.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: robot.launch.py  robot_state_publisher.launch.py  rviz2.launch.py
src/robot_bringup/param/: robot.yaml
src/robot_cartographer/: CMakeLists.txt  package.xml
src/robot_cartographer/config/: robot_lds_2d.lua
src/robot_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/robot_cartographer/rviz/: robot_cartographer.rviz
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: robot_display.launch.py
src/robot_description/meshes/: base.stl  caster.stl  lds.stl  wheel.stl
src/robot_description/rviz/: display.rviz
src/robot_description/urdf/: robot.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/launch/: robot_gazebo.launch.py  robots_gazebo.launch.py
src/robot_gazebo/models/turtlebot3_house/: model.sdf
src/robot_gazebo/worlds/: house.world
src/robot_motion/: CMakeLists.txt  package.xml
src/robot_motion/include/robot_motion/: robot_motion.hpp
src/robot_motion/src/: main.cpp  robot_motion.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_node/: CMakeLists.txt  package.xml
src/robot_node/include/robot_node/: control_table.hpp  diff_drive_controller.hpp  dynamixel_sdk_wrapper.hpp  odometry.hpp  robot.hpp  twist_publisher.hpp  twist_subscriber.hpp
src/robot_node/include/robot_node/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
src/robot_node/include/robot_node/sensors/: battery_state.hpp  imu.hpp  joint_state.hpp  sensor_state.hpp  sensors.hpp
src/robot_node/param/: config.yaml
src/robot_node/src/: diff_drive_controller.cpp  dynamixel_sdk_wrapper.cpp  main.cpp  odometry.cpp  robot.cpp
src/robot_node/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
src/robot_node/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
src/robot_planning/: CMakeLists.txt  package.xml
src/robot_planning/include/robot_planning/: a_star.hpp  dwa.hpp  robot_planning.hpp
src/robot_planning/src/: main.cpp  robot_planning.cpp
src/robot_polygon/: CMakeLists.txt  package.xml
src/robot_polygon/include/robot_polygon/: robot_polygon.hpp
src/robot_polygon/launch/: robot_polygon.launch.py
src/robot_polygon/src/: main.cpp  robot_polygon.cpp
src/robot_teleop/: package.xml  setup.py
src/robot_teleop/robot_teleop/: teleop.py
src/simple_follow_edge/: CMakeLists.txt  package.xml
src/simple_follow_edge/include/simple_follow_edge/: pid_controller.hpp
src/simple_follow_edge/src/: pid_controller.cpp  simple_follow_edge_node.cpp
src/smart_escape/: CMakeLists.txt  package.xml
src/smart_escape/include/smart_escape/: smart_escape.hpp
src/smart_escape/launch/: smart_escape.launch.py
src/smart_escape/rviz/: rviz.rviz
src/smart_escape/src/: main.cpp  smart_escape.cpp
(+5 files in other folders)
